--- a/views/auth.hbs
+++ b/views/auth.hbs
@@ -1,2 +1,26 @@
- <h3>Пока что здесь ничего нет</h3>
- <h4>Скоро будет Авторизация</h4>
+
+ <h3>Друг мой, авторизируйся</h3>
+ <form action="/auth" method="POST">
+ <div class="row">
+    <form class="col s12">
+      <div class="row">
+        <div class="input-field col s6">
+          <input id="login" name="login" type="text" class="validate">
+          <label for="login">Логин</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s6">
+          <input id="passwd" name="passwd" type="text" class="validate">
+          <label for="passwd">Пароль</label>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="container">
+  <div class="row">
+    <a class="waves-effect waves-light btn" type="submit">Войти</a>
+    <a class="waves-effect waves-light btn" href="/reg">Зарегистрироваться</a>
+ </div>
+ </div>
+</form>
